# agent_loop

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.example  Makefile  PROJECT_STRUCTURE.md  README.md  README_DOCKER.md  SPRINT2_QUICKSTART.md  __init__.py  cli.py  docker-compose.training.yml  package-lock.json  pyproject.toml  pytest.ini  requirements-flexible.txt  requirements-training.txt  requirements.txt  type_guardian_example.py
.claude/agents/: AGENT_COLLABORATION_GUIDE.md  AGENT_COORDINATION_MATRIX.md  agent-orchestrator.md  docker-container-architect.md  fastapi-async-architect.md  guardrails-auditor.md  llm-optimization-engineer.md  mlops-pipeline-engineer.md  observability-engineer.md  python-type-guardian.md  system-architect.md  test-automator.md
.claude/agents/audit_session_20250731_233132/: MISSION_COORDINATION.md  RESUME_EXECUTIF.md  STATUS_GLOBAL.md  TEMPLATE_RAPPORT_STANDARD_v2.yaml
.github/workflows/: ci.yml  latex-documentation.yml
agent/: __init__.py
agent/plugins/: browser_tool.py
agent/prompts/: few_shot_examples.json
agent/tools/: __init__.py
ansible/playbooks/: README_python_setup.md  base-setup.yml  monitoring-setup.yml  ollama-setup.yml
core/: settings.py
core/utils/: __init__.py
docs/: ARCHITECTURE.md  HRM_TODO.md  LATEX_TESTING_STRATEGY.md  TRAINING_COMMANDS_humain.md
docs/ARCHITECTURE/: ARCHITECTURE.md  DEPLOYMENT_PROCEDURES.md  MLOPS_ARCHITECTURE.md
docs/R&D/: GEMMA3N_TECHNICAL_REFERENCE.md  LLM_RESEARCH_AND_INTEGRATION.md  UNSLOTH_GEMMA3N_DOCUMENTATION.md  UNSLOTH_TRAINING_EXAMPLES.md
docs/R&D/official/: GEMMA_3N_OFFICIAL_DOCS.md  UNSLOTH_INSTALLATION_GUIDE.md  UNSLOTH_OFFICIAL_README.md
docs/SECURITY/: OBSERVABILITY_SETUP.md  SECURITY_ANALYSIS_REPORT.md  TYPE_AUDIT_REPORT.md
docs/claude'srules/: code_architecture.xml  fastapi_async.xml  rules.md  security.xml  testing.xml
docs/contexte*important<think>/: CONTEXT_REPORT.md  CONTEXT_TRAINING.md  DATASET_AUDIT_REPORT.md  PROJECT_STRUCTURE.md  docker_training_test_report.md
docs/exemples/: example_typed_code.py
docs/latex/: .gitignore  Makefile  OBSERVABILITY.md  README.md  requirements.txt
docs/latex/bibliography/: references.bib
docs/latex/scripts/: extract_bibliography.py  latex_monitoring.py
docs/latex/sources/: hierarchical_reasoning_model.tex
docs/observabilty/: OBSERVABILITY_IMPLEMENTATION_GUIDE.md  OBSERVABILITY_REVIEW_REPORT.md
docs/rules/: docker_container.xml  ml_engineering.xml  mlops_infrastructure.xml  observability.xml  python_development.xml
docs/scrummaster/: SPRINT1_ARCHITECTURE_RECOMMENDATIONS.md  SPRINT1_IMPLEMENTATION_PLAN.md  SPRINT_0_SUMMARY.md  sprint1.md
inference/: __init__.py  api.py
infrastructure/ansible/: ansible.cfg  inventory.yml  site.yml
infrastructure/ansible/playbooks/: blue-green-deploy.yml  dev-tools-setup.yml  python-setup.yml
infrastructure/ansible/templates/: nginx-canary.j2  nginx-single.j2
infrastructure/docker/: docker-compose.new.yml  docker-compose.prod.yml  docker-compose.training.yml  docker-compose.yml
infrastructure/external_resources/: README.md  datasets  hf_cache  jeux  ml_models
infrastructure/terraform/: outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
leboncoin_extension/: background.js  config.js  content.js  manifest.json  rules.json
leboncoin_extension/css/: popup.css  w3.css
leboncoin_extension/html/: popup.html
leboncoin_extension/js/: aboutDialog.js  config.js  logsDialog.js  popup.js
leboncoin_extension/js/utils/: commonUtils.js  dateUtils.js  domUtils.js  searchUtils.js  searchUtils.old.js  storageUtils.js
leboncoin_extension/png/: readme.txt
models/: README.md  model_cache
models/core/: __init__.py  settings.py
models/core/utils/: __init__.py
models/inference/: README_ARCHITECTURE.md  api.py  app.py  groupthink.py
models/inference/middleware/: security.py
models/inference/models/: __init__.py  schemas.py
models/inference/routers/: __init__.py  agents.py  health.py  ollama.py  training.py
models/inference/services/: OLLAMA_REFACTORING_PLAN.md  __init__.py  dependencies.py  external_api.py  health.py  ollama.py  training.py
models/inference/websockets/: __init__.py
models/model_checkpoints/: latest_checkpoint.json
models/scripts/: README.md
models/scripts/docker/: docker-dev.sh  docker-prod.sh  test_docker_training.py
models/scripts/infrastructure/: gpu_memory_manager.sh  install_nvidia_docker.sh  move_models_to_ssd.sh  native_gpu_setup.sh
models/scripts/lora/: merge_and_convert_lora.py  merge_lora_simple.py
models/scripts/monitoring/: model_drift_detection.py  model_registry.py
models/scripts/training/: analyze_training_logs.py  monitor_training_example.py  run_hrm_training.sh  run_training.sh  run_unsloth.sh  run_unsloth_training.sh  train_2epochs.sh  train_beast_mode.sh  train_gsm8k_test.sh  (+5 more)
models/training/: add_step_hints.py  dataset_config.yaml  evaluate_toolbench.py  orchestrate_training.py  pipeline_config.yaml
monitoring/: README_GPU_MONITORING.md  __init__.py  prometheus.prod.yml  prometheus.yml  training_monitor.py
monitoring/nginx/: nginx.conf
plugins/: __init__.py  browser_tool.py
prompts/: agent_rules.xml  few_shot_examples.json  system_prompt.txt
scripts/: download_code_hrm_datasets.py  download_hrm_dataset.py  ollama_usage_examples.py  setup_vm.sh  test_docker_training.py  test_ollama_integration.py
terraform/: main.tf  versions.tf
tests/: __init__.py  check_conversation_length.py  conftest.py  test_agent_api.py  test_agent_navigation.py  test_browser_tool.py  test_core.py  test_formatting.py  test_groupthink.py  test_health_endpoints.py  test_latex_ci_integration.py  test_latex_documentation.py  test_model_checkpoint.py  test_model_comparison.py  test_model_inference.py  test_model_later.py  test_model_metrics.py  test_training_endpoints.py
tests/unit/: test_latex_bibliography_extraction.py
training/: __init__.py  mix_datasets.py  qlora_config.py  qlora_finetune.py
(+46 files in other folders)
